kubernetes/admission-webhooks/admissionvalidator-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-validator
spec:
  selector:
    matchLabels:
      run: demo-validator
  replicas: 1
  template:
    metadata:
      labels:
        run: demo-validator
    spec:
      volumes:
      - name: snakeoil-tls
        secret:
          secretName: snakeoil-tls
      containers:
      - name: demo-validator
        image: thzpub/vnf-swak-diag
        volumeMounts:
        - mountPath: /mnt/snakeoil-tls
          name: snakeoil-tls
          readOnly: true
        command:
        - bash
        - -c
        - |
          [...]
        ports:
        - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: demo-validator
  labels:
    run: demo-validator
spec:
  ports:
  - port: 443
    protocol: TCP
  selector:
    run: demo-validator
