kubernetes/admission-webhooks/master-admission-config.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: demo-validator
webhooks:
- name: demo-validator.cluster.local
  rules:
  - apiGroups:
    - "*"
    apiVersions:
    - "*"
    operations:
    - CREATE
    resources:
    - "*"
  clientConfig:
    service:
      namespace: default
      name: demo-validator
    caBundle: create_it
